--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,38 +16,62 @@ env:
   IMAGE_NAME: ${{ github.repository_owner }}/bal-analysis-dashboard
 
 jobs:
-  # =========================================================================
-  # Job 1: Linting & Security Scan
-  # =========================================================================
   lint-and-scan:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      security-events: write  # ✅ FIX: Ajout permission pour CodeQL
+      pull-requests: read
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Run Hadolint (Dockerfile linter)
+      # ============================================================================
+      # Hadolint - Lint Dockerfile
+      # ============================================================================
+      - name: Run Hadolint
         uses: hadolint/hadolint-action@v3.1.0
         with:
           dockerfile: Dockerfile
           failure-threshold: warning
+          ignore: DL3008,DL3009  # Ignore certains warnings apt-get
 
-      - name: Run Trivy security scanner
+      # ============================================================================
+      # Trivy - Security scan
+      # ============================================================================
+      - name: Run Trivy vulnerability scanner (Filesystem)
         uses: aquasecurity/trivy-action@master
         with:
           scan-type: 'fs'
           scan-ref: '.'
           format: 'sarif'
-          output: 'trivy-results.sarif'
+          output: 'trivy-fs-results.sarif'
+          severity: 'CRITICAL,HIGH'
+          exit-code: '0'  # ✅ Ne pas fail le build sur des vulnérabilités
 
+      # ✅ FIX: Upload uniquement si le fichier existe ET si pas PR depuis fork
       - name: Upload Trivy results to GitHub Security
-        uses: github/codeql-action/upload-sarif@v3
-        if: always()
+        uses: github/codeql-action/upload-sarif@v4  # ✅ FIX: v3 → v4
+        if: |
+          always() && 
+          hashFiles('trivy-fs-results.sarif') != '' &&
+          (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
         with:
-          sarif_file: 'trivy-results.sarif'
+          sarif_file: 'trivy-fs-results.sarif'
+          category: 'trivy-filesystem'
 
-  # =========================================================================
-  # Job 2: Build and Push Docker Image
-  # =========================================================================
+      # Afficher les résultats dans les logs (toujours utile)
+      - name: Display Trivy results
+        if: always()
+        run: |
+          if [ -f trivy-fs-results.sarif ]; then
+            echo "✅ Trivy scan completed"
+            cat trivy-fs-results.sarif
+          else
+            echo "⚠️ Trivy results file not found"
+          fi
+
   build-and-push:
     runs-on: ubuntu-latest
     needs: lint-and-scan
@@ -55,6 +79,7 @@ jobs:
       contents: read
       packages: write
       id-token: write
+      security-events: write  # ✅ Ajout pour Trivy image scan
 
     steps:
       - name: Checkout repository
@@ -63,38 +88,30 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Log in to GitHub Container Registry
+      - name: Log in to GHCR
         uses: docker/login-action@v3
         with:
           registry: ${{ env.REGISTRY }}
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract metadata (tags, labels)
+      - name: Extract metadata
         id: meta
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
-            # Tag with branch name
             type=ref,event=branch
-            # Tag with PR number
             type=ref,event=pr
-            # Tag with semver
             type=semver,pattern={{version}}
             type=semver,pattern={{major}}.{{minor}}
             type=semver,pattern={{major}}
-            # Tag with git short SHA
             type=sha,prefix={{branch}}-
-            # Tag latest on main branch
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
-          labels: |
-            org.opencontainers.image.title=BAL Analysis Dashboard
-            org.opencontainers.image.description=Dashboard pour l'analyse des BAL
-            org.opencontainers.image.vendor=${{ github.repository_owner }}
 
-      - name: Build and push Docker image
+      - name: Build and push
         uses: docker/build-push-action@v5
+        id: build
         with:
           context: .
           file: ./Dockerfile
@@ -104,27 +121,55 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           platforms: linux/amd64,linux/arm64
-          build-args: |
-            BUILD_DATE=${{ steps.meta.outputs.created }}
-            VCS_REF=${{ github.sha }}
+          # ✅ Load image localement pour le scan Trivy
+          load: ${{ github.event_name == 'pull_request' }}
 
-      - name: Run Trivy on Docker image
+      # ============================================================================
+      # Trivy - Scan de l'image Docker construite
+      # ============================================================================
+      - name: Run Trivy vulnerability scanner (Docker image)
         uses: aquasecurity/trivy-action@master
-        if: github.event_name != 'pull_request'
+        if: success()
         with:
+          scan-type: 'image'
           image-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
           format: 'sarif'
           output: 'trivy-image-results.sarif'
+          severity: 'CRITICAL,HIGH'
+          exit-code: '0'
 
-      - name: Upload Trivy image results
-        uses: github/codeql-action/upload-sarif@v3
-        if: always() && github.event_name != 'pull_request'
+      - name: Upload Trivy image results to GitHub Security
+        uses: github/codeql-action/upload-sarif@v4
+        if: |
+          always() && 
+          hashFiles('trivy-image-results.sarif') != '' &&
+          (github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository)
         with:
           sarif_file: 'trivy-image-results.sarif'
+          category: 'trivy-docker-image'
 
-  # =========================================================================
-  # Job 3: Create Release (on tag only)
-  # =========================================================================
+      # ============================================================================
+      # Generate SBOM (Software Bill of Materials)
+      # ============================================================================
+      - name: Generate SBOM with Syft
+        if: github.event_name != 'pull_request'
+        uses: anchore/sbom-action@v0
+        with:
+          image: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.version }}
+          format: cyclonedx-json
+          output-file: sbom.cyclonedx.json
+
+      - name: Upload SBOM as artifact
+        if: github.event_name != 'pull_request'
+        uses: actions/upload-artifact@v4
+        with:
+          name: sbom-cyclonedx
+          path: sbom.cyclonedx.json
+          retention-days: 90
+
+  # ============================================================================
+  # Create GitHub Release (only on tags)
+  # ============================================================================
   create-release:
     runs-on: ubuntu-latest
     needs: build-and-push
@@ -141,13 +186,40 @@ jobs:
       - name: Generate changelog
         id: changelog
         run: |
-          echo "## What's Changed" > CHANGELOG.md
-          git log $(git describe --tags --abbrev=0 HEAD^)..HEAD --pretty=format:"- %s (%h)" >> CHANGELOG.md
+          # Get previous tag
+          PREVIOUS_TAG=$(git describe --tags --abbrev=0 HEAD^ 2>/dev/null || echo "")
+          
+          if [ -z "$PREVIOUS_TAG" ]; then
+            echo "changelog=First release" >> $GITHUB_OUTPUT
+          else
+            CHANGELOG=$(git log ${PREVIOUS_TAG}..HEAD --pretty=format:"- %s (%h)" --no-merges)
+            echo "changelog<<EOF" >> $GITHUB_OUTPUT
+            echo "$CHANGELOG" >> $GITHUB_OUTPUT
+            echo "EOF" >> $GITHUB_OUTPUT
+          fi
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v1
+      - name: Create Release
+        uses: softprops/action-gh-release@v2
         with:
-          body_path: CHANGELOG.md
+          body: |
+            ## 🚀 Changes
+            
+            ${{ steps.changelog.outputs.changelog }}
+            
+            ## 📦 Docker Images
+            
+            ```bash
+            docker pull  $ {{ env.REGISTRY }}/ $ {{ env.IMAGE_NAME }}: $ {{ github.ref_name }}
+            docker pull  $ {{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+            ```
+            
+            ## 🔒 Security
+            
+            - Trivy scan completed
+            - SBOM available in artifacts
+            
           generate_release_notes: true
+          make_latest: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
